# cytozip

./: .gitignore  MANIFEST.in  README.md  dev.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
conda-recipe/: meta.yaml
cytozip/: __init__.py  _bam_pileup.c  _bam_pileup.pyx  _version.py  allc.py  array.py  bam.py  cz.py  cz_accel.pyx  cz_reader.mjs  dmr.py  dmr_accel.c  dmr_accel.pyx  features.py  merge.py  pivot.py
data/: allc2mz.smk
docs/: README.md
docs/source/: benchmark.md  conf.py  cytozip.allc.rst  cytozip.array.rst  cytozip.cz.rst  cytozip.cz_accel.rst  cytozip.dmr.rst  cytozip.features.rst  cytozip.pivot.rst  cytozip.rst  dnam.rst  format_v2_design.md  index.rst  modules.rst
notebooks/: 1.quick_start.ipynb  2.dnam.ipynb  3.python_api.ipynb  dev.ipynb  dnam.ipynb  python_api.ipynb  quick_start.ipynb  remote_reading.ipynb
tests/: bench_block_size.py  bench_chunks_prefetch.py  bench_deflate_delta_check.py  bench_deflate_threads.py  bench_inflate_threads.py  bench_query_multi.py  bench_query_multi_cold.py  benchmark_bam_to_cz.py  benchmark_query.py  compare_allc_vs_cz.py  compare_bam_backends.py  measure_sparsity.py  test_catcz.py  test_cz_reader.mjs  test_delta_index.py  test_dmr_vs_allcools.py  test_end_to_end.py  test_merge_cz.py  test_remote.py  test_uint.py
